--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ dependencies = [
     "aiohttp >= 3",
     "async-timeout >= 4",
     "platformdirs >= 4",
+    "customtkinter >= 5",
+    "CTkMessagebox >= 2",
 ]
 requires-python = ">= 3.9"
 
